--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1,14 +1,30 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
 :root {
     --primaary: red;
     --secondary: black;
+    --primary-color: #0E4BF1;
+    --panel-color: #FFF;
+    --text-color: #000;
+    --black-light-color: #707070;
+    --border-color: #e6e5e5;
+    --toggle-color: #DDD;
+    --box1-color: #4DA3FF;
+    --box2-color: #FFE6AC;
+    --box3-color: #E7D1FC;
+    --title-icon-color: #fff;
+    --tran-05: all 0.5s ease;
+    --tran-03: all 0.3s ease;
+    --tran-03: all 0.2s ease;
 }
-
 *,
 ::after,
 ::before {
-    box-sizing: border-box
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 @media (prefers-reduced-motion:no-preference) {
@@ -19,8 +35,7 @@
 
 body {
     margin: 0;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent
+    min-height: 100vh;
 }
 
 hr {
@@ -136,6 +151,10 @@ tr {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch
     }
+}
+/* Ordered Lists & unordered */
+.list-style-none {
+    list-style-type: none;
 }
 
 /* Buttons Styling */
@@ -889,4 +908,36 @@ select {
     }
 }
 
-/*  */
+/* NavBar */
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    padding: 10px 14px;
+    background-color: var(--panel-color);
+    border-right: 1px solid var(--border-color);
+    transition: var(--tran-05);
+}
+nav .logo-name {
+    display: flex;
+    align-items: center;
+}
+nav .logo-image {
+    display: flex;
+    justify-content: center;
+    min-width: 45px;
+}
+nav .logo-image img {
+    width: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+nav .logo-name .logo_name {
+    font-size: 22px;
+    font-weight: 600;
+    color: var(--text-color);
+    margin-left: 14px;
+    transition: var(--tran-05);
+}
