--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -4,7 +4,7 @@
 :root {
     --primaary: red;
     --secondary: black;
-    --primary-color: #0E4BF1;
+    --primary-color: #e63946;
     --panel-color: #FFF;
     --text-color: #000;
     --black-light-color: #707070;
@@ -35,6 +35,7 @@
 body {
     margin: 0;
     min-height: 100vh;
+    font-family: 'Poppins', sans-serif;
 }
 
 hr {
@@ -252,6 +253,9 @@ select {
     .container-xxl {
         max-width: 1320px
     }
+}
+.d-flex {
+    display: flex;
 }
 
 .row {
@@ -920,11 +924,9 @@ nav {
     transition: var(--tran-05);
 }
 nav .logo-name {
-    display: flex;
     align-items: center;
 }
 nav .logo-image {
-    display: flex;
     justify-content: center;
     min-width: 45px;
 }
@@ -939,4 +941,61 @@ nav .logo-name .logo_name {
     color: var(--text-color);
     margin-left: 14px;
     transition: var(--tran-05);
+}
+nav .menu-items {
+    margin-top: 40px;
+    height: calc(100% - 90px);
+    flex-direction: column;
+    justify-content: space-between;
+}
+.menu-items li a {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    text-decoration: none;
+    position: relative;
+}
+.menu-items li a i {
+    font-size: 24px;
+    min-width: 45px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--black-light-color);
+}
+.menu-items li a .link-name {
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--black-light-color);
+    transition: var(--tran-05);
+}
+.nav-links li a:hover i, .nav-links li a:hover .link-name {
+    color: var(--primary-color);
+}
+
+/* dashboard */
+.dashboard {
+    position: relative;
+    left: 250px;
+    background-color: var(--panel-color);
+    min-height: 100vh;
+    width: calc(100% - 250px);
+    padding: 10px 14px;
+    transition: var(--tran-05);
+}
+.dashboard .top-bar {
+    position: fixed;
+    top: 0;
+    left: 250px;
+    width: calc(100% - 250px);
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 14px;
+    background-color: var(--panel-color);
+    transition: var(--tran-05);
+    z-index: 10;
+}
+.dashboard .top-bar i.fa.fa-bars {
+    font-size: 26px;
 }
