--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1212,8 +1212,8 @@ nav .menu-items {
 .nav-links li a:hover .link-name,
 .logout li a:hover i,
 .logout li a:hover .link-name,
-li.active a i,
-li.active a .link-name {
+.nav-links li.active a i,
+.nav-links li.active a .link-name {
     color: var(--primary-color);
 }
 
