added the restaurants loop css

--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -495,6 +495,12 @@ select {
 .d-flex {
     display: flex;
 }
+.align-items {
+    align-items: center;
+}
+.justify-space-between {
+    justify-content: space-between;
+}
 
 .row {
     --bs-gutter-x: 1.5rem;
@@ -1350,4 +1356,32 @@ nav.close ~ .dashboard, nav.close ~ .dashboard .top-bar {
 }
 .title h1 {
     font-size: 24px;
+}
+/* Restaurant Loop */
+.restaurant {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 20px;
+    padding: 12px 12px 7px 12px;
+}
+.restaurant img {
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+.status {
+    color: var(--primary-color);
+}
+.reviews {
+    background-color: rgb(36, 150, 63);
+    color: white;
+    padding: 0px 0.4rem;
+    font-size: 15px;
+    border-radius: 0.6rem;
+}
+.trash-icon {
+    color: red;
+}
+.edit-icon, .trash-icon {
+    font-size: 18px;
 }
