--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,15 @@
   justify-content: space-between;
   height: 80px;
 }
+
+.links {
+  margin-left: 65vw;
+  list-style: none;
+  display: flex;
+  gap: 3vw;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
