--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,11 @@
   font-weight: bold;
   font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+.hyperlink{
+  text-decoration:none;
+  color:white;
+  white-space: nowrap;
+  overflow:hidden;
+  text-overflow: ellipsis;
+}
