--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@
   margin-left: 65vw;
   list-style: none;
   display: flex;
-  gap: 3vw;
+  gap: 2vw;
   justify-content: center;
   align-items: center;
   font-size: 18px;
@@ -34,6 +34,21 @@
 .hyperlink{
   text-decoration:none;
   color:white;
+  white-space: nowrap;
+  overflow:hidden;
+  text-overflow: ellipsis;
+}
+
+.sign-up {
+  border: none;
+  font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  background-color: white;
+  border-radius: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 2vh 3vw;
+  color: rgb(73, 73, 73);
+  cursor:pointer;
   white-space: nowrap;
   overflow:hidden;
   text-overflow: ellipsis;
