fixed the name of the background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .section-1 {
-  background: url("../images/presentation.JPG");
+  background: url("../images/background.JPG");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
