--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,12 @@
   overflow:hidden;
   text-overflow: ellipsis;
 }
+
+.middle-header{
+  margin-top:6vh;
+  font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  font-size: 30px;
+}
