--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,3 +67,9 @@
   padding: 35vh 0 10vh 0;
   width: 50%;
 }
+
+.corner-text {
+  font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color:white;
+  font-size:30px;
+}
