--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,27 @@
   color:white;
   font-size:30px;
 }
+
+.section-2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 15vw;
+  flex-wrap: wrap;
+
+}
+
+.rider{
+  margin-top: 8vh;
+  font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  text-align: center;
+}
+
+.section-2-1{
+  width: 50%;
+}
+.rider-text{
+text-align: center;
+font-size: 20px;
+}
