--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,3 +97,40 @@
 text-align: center;
 font-size: 20px;
 }
+
+
+
+@media (max-width:1000px) {
+  .links{
+    margin-left: 30vw;
+    margin-right: 5vw;
+    margin-top: 3vh;
+  }
+
+  .middle-header{
+    margin-top: 10vh;
+    font-size: 20px;
+    white-space: nowrap;
+  }
+  
+  .hyperlink{
+    font-size: 25px;
+  }
+
+  .content-container{
+    padding: 20vh 0 8vh 0;
+    width:50%;
+    margin-left:1vw;
+  }
+
+  .sign-up{
+    padding: 1vh 4vw;
+    font-size: 20px;
+  }
+
+  .rider{
+      flex: 0 0 100%;
+  }
+
+
+}
