--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,12 +93,41 @@ html, body{
   text-align: center;
 }
 
-.section-2-1{
+.rider-header{
+  font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+}
+
+.section-2-1 {
   width: 50%;
 }
-.rider-text{
-text-align: center;
-font-size: 20px;
+
+.rider-text {
+  text-align: center;
+  font-size: 20px;
+  font-family: DD-TTNorms, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+}
+
+.section-3 {
+  width:100%;
+  height: auto;
+  background-color: rgb(255, 240, 237);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 5vw;
+}
+
+
+.section-3 > img {
+ width: 50%;
+ height:50%;
+}
+
+.wrapper {
+  text-align: center;
 }
 
 
