--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,7 @@ html, body{
 
 .section-4 {
   margin-top:4vh;
+  margin-bottom:4vh;
   width:100%;
   height: auto;
   display: flex;
@@ -155,6 +156,22 @@ html, body{
   margin-top: 2vh;
 }
 
+.footer{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  background-color: rgb(228, 228, 228);
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+ 
+}
+
+.social-media{
+  display: flex;
+  gap: 2vw;
+
+}
 
 @media (max-width:750px) {
   .links{
