--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1422,6 +1422,7 @@ nav.close ~ .dashboard, nav.close ~ .dashboard .top-bar {
 }
 .actions i {
     margin-left: 7px;
+    cursor: pointer;
 }
 .actions button {
     border: 0;
