--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1428,3 +1428,6 @@ nav.close ~ .dashboard, nav.close ~ .dashboard .top-bar {
     border: 0;
     background: none;
 }
+.user-name {
+    text-transform: capitalize;
+}
