--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1386,6 +1386,9 @@ nav.close ~ .dashboard, nav.close ~ .dashboard .top-bar {
 .edit-icon, .trash-icon {
     font-size: 18px;
 }
+.edit-icon {
+    color: #333;
+}
 .initial-name > div {
     width: 50px;
     height: 50px;
