--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1435,7 +1435,7 @@ nav.close ~ .dashboard, nav.close ~ .dashboard .top-bar {
 }
 .restaurant-detail img {
     max-width: 100%;
-    width: 400px;
+    width: 100%;
     height: 250px;
     object-fit: cover;
 }
@@ -1466,7 +1466,7 @@ input[type=time] {
     max-width: 200px;
     width: 100%;
 }
-.save-changes {
+.save-changes, .add-new {
     background: var(--primary-color);
     border-color: var(--primary-color);
     color: #fff;
@@ -1482,4 +1482,8 @@ input[type=time] {
     border-radius: 3px;
     white-space: nowrap;
     box-sizing: border-box;
+}
+.add-new {
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
