--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -280,7 +280,7 @@
   height: 100%;
   display: flex;
   overflow: hidden;
-  max-width: 160px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -293,10 +293,10 @@
 
 .p-img a img {
   width: 100%;
-  height: 100%;
-  border-radius: 50%;
+  height: 200px;
+  border-radius: 10px;
   object-position: center;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .p-box-text {
