--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -292,7 +292,8 @@
 }
 
 .p-img a img {
-  width: 100%;
+  width: 260px;
+  max-width: 100%;
   height: 200px;
   border-radius: 10px;
   object-position: center;
