--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -10,9 +10,6 @@
     --black-light-color: #707070;
     --border-color: #e6e5e5;
     --toggle-color: #DDD;
-    --box1-color: #4DA3FF;
-    --box2-color: #FFE6AC;
-    --box3-color: #E7D1FC;
     --title-icon-color: #fff;
     --tran-05: all 0.5s ease;
     --tran-03: all 0.3s ease;
@@ -312,10 +309,6 @@ ul ul {
     .h2,
     h2 {
         font-size: 2rem
-    }
-    .h3,
-    h3 {
-        font-size: 1.75rem
     }
     .h4,
     h4 {
@@ -1228,7 +1221,7 @@ nav .menu-items {
 .dashboard {
     position: relative;
     left: 250px;
-    background-color: var(--panel-color);
+    background-color: #f8f8f8;
     min-height: 100vh;
     width: calc(100% - 250px);
     padding: 10px 14px;
@@ -1241,7 +1234,7 @@ nav .menu-items {
     width: calc(100% - 250px);
     justify-content: space-between;
     align-items: center;
-    padding: 10px 14px;
+    padding: 10px 24px 10px 26px;
     background-color: var(--panel-color);
     transition: var(--tran-05);
     z-index: 10;
@@ -1363,6 +1356,7 @@ nav.close ~ .dashboard, nav.close ~ .dashboard .top-bar {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 20px;
     padding: 12px 12px 7px 12px;
+    background-color: #ffffff;
 }
 .restaurant img {
     height: 100px;
@@ -1489,4 +1483,8 @@ input[type=time] {
 }
 .status i {
     margin-left: 7px;
+}
+.title {
+    padding-left: 10px;
+    padding-right: 10px;
 }
