--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1600,3 +1600,36 @@ select {
 .bg-color {
   background-color: #f8f8f8;
 }
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}
+
+
+.rating > input{ display:none;}
+
+.rating > label {
+  position: relative;
+  width: 1.1em;
+  font-size: 25px;
+  color: #FFD700;
+  cursor: pointer;
+}
+
+.rating > label::before{
+  content: "\2605";
+  position: absolute;
+  opacity: 0;
+}
+
+.rating > label:hover:before,
+.rating > label:hover ~ label:before {
+  opacity: 1 !important;
+}
+
+.rating > input:checked ~ label:before{
+  opacity:1;
+}
+
+.rating:hover > input:checked ~ label:before{ opacity: 0.4; }
