added banners for restaurant and restaurant details pages

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1150,7 +1150,32 @@ select {
   background-position: center;
   background-attachment: fixed;
 }
-
+.restaurants-banner {
+  background: url("../images/restaurant-banner.jpg") no-repeat;
+  height: 70vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative;
+}
+.restaurants-banner-details {
+  background: url("../images/restaurant-details.jpg") no-repeat;
+  height: 70vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative;
+}
+.restaurants-banner::before, .restaurants-banner-details::before {
+  content: '';
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+  opacity: 0.3;
+  position: absolute;
+}
 .icon {
   color: #fff;
   font-size: 20px;
